# AKTAmercy

./: .gitignore  AGENTS.md  CHROMER.py  README.md  config.json  environment.yml  pyproject.toml  requirements.txt
dev/debug/: ?INSPECT  parseLOG
docs/: README.md
docs/superpowers/specs/: 2026-06-29-signal-interpretation-design.md
src/chromer/: __init__.py  cli.py  config.py  fractions.py  logging_utils.py  metadata.py  plotting.py  unicorn.py
tests/: test_decode_float_payload.py  test_fraction_ranges.py  test_interpretation_labels.py  test_metadata.py
