[project]
name = "chromer"
version = "1.1.0"
description = "Post-process AKTA UNICORN chromatography exports into annotated JPG chromatograms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8.3",
  "scipy>=1.12.0",
  "seaborn>=0.13.2",
]

[project.scripts]
chromer = "chromer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromer"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/config.json",
  "/README.md",
  "/LICENSE",
]
